# Smart_medical

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig.old
PCB/: ProPrj_Smart_medcil_2024-12-30.epro
PCB/Smart_medcilTEST/Board1/: PCB1.pcbdoc
PCB/Smart_medcilTEST/Board1/Schematic1/: 1_P1.schdoc
main/: CMakeLists.txt  MAX30102.cpp  MAX30102.h  NTC.cpp  NTC.h  System.cpp  System.h  http.cpp  http.h  i2c.cpp  i2c.h  index.cpp  main.cpp  oled.cpp  oled.h  timer.h  wifi_ap.cpp  wifi_ap.h
